new feature: .target files taken into account with the property "targetFile"
Signed-off-by: rjarry <>